--- a/amplify-app/amplify/.config/project-config.json
+++ b/amplify-app/amplify/.config/project-config.json
@@ -1,5 +1,5 @@
 {
-    "projectName": "amplifyapp",
+    "projectName": "cryptoapp",
     "version": "3.0",
     "frontend": "javascript",
     "javascript": {
