--- a/amplify-app/amplify/backend/backend-config.json
+++ b/amplify-app/amplify/backend/backend-config.json
@@ -1,3 +1,26 @@
 {
-	"auth": {}
+	"function": {
+		"cryptofunction": {
+			"build": true,
+			"providerPlugin": "awscloudformation",
+			"service": "Lambda",
+			"dependsOn": []
+		}
+	},
+	"api": {
+		"cryptoapi": {
+			"service": "API Gateway",
+			"providerPlugin": "awscloudformation",
+			"dependsOn": [
+				{
+					"category": "function",
+					"resourceName": "cryptofunction",
+					"attributes": [
+						"Name",
+						"Arn"
+					]
+				}
+			]
+		}
+	}
 }
