Add amplify to container image build

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -83,4 +83,6 @@ RUN apt-get update \
     # Clean up
     && apt-get autoremove -y \
     && apt-get clean -y \
-    && rm -rf /var/lib/apt/lists/*
+    && rm -rf /var/lib/apt/lists/* \
+    # Install amplify cli
+    && npm install -g @aws-amplify/cli
