--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "[javascript]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
       },
-      "editor.formatOnSave": true
+      "editor.formatOnSave": true,
+      "git.ignoreLimitWarning": true
 }
